# BioFabric-rs

./: .gitignore  Cargo.toml  FRONTEND_PLAN.md  README.md
crates/cli/src/: args.rs  main.rs
crates/cli/tests/: cli_tests.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs  worker.rs
crates/core/src/alignment/: cycle.rs  cycle_relation.rs  groups.rs  jaccard.rs  layout.rs  loader.rs  merge.rs  mod.rs  orphan.rs  scoring.rs  types.rs
crates/core/src/analysis/: cycle.rs  graph.rs
crates/core/src/export/: image.rs
crates/core/src/io/: attribute.rs  display_options.rs  gw.rs  session.rs  sif.rs  xml.rs
crates/core/src/layout/: build_data.rs  cluster.rs  control_top.rs  default.rs  hierarchy.rs  link_group.rs  mod.rs  result.rs  set.rs  similarity.rs  traits.rs  world_bank.rs
crates/core/src/model/: link.rs  network.rs  node.rs  selection.rs
crates/core/src/render/: display_options.rs  mod.rs
crates/core/tests/: analysis_tests.rs  image_export_tests.rs  parity_tests.rs  pipeline_stub.rs
crates/core/tests/parity_tests/: alignment_tests.rs  common.rs  default_tests.rs  main.rs  runners.rs
frontend/: README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json
frontend/src/: app.tsx  main.tsx  styles.css
frontend/src/lib/: colors.ts  parsebiofabric.ts  renderbiofabric.ts  scenePrep.ts
frontend/src/state/: viewState.ts
frontend/src/types/: biofabric.ts
tests/bench/: run_bench.sh  test_speed.py
tests/hidden/: README.md  hidden_tests.rs
tests/parity/: README.md  REMAINING_TEST_SURFACE.md  generate_goldens.sh  generate_goldens_inline.sh  test_manifest.toml
(+6 files in other folders)
