[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "LGPL-2.1"
repository = "https://github.com/RishiDesai/BioFabric-rs"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2"

# Collections
indexmap = { version = "2.0", features = ["serde"] }

# Safe casting for GPU buffer data
bytemuck = { version = "1.14", features = ["derive"] }

# Image export (CPU rendering for CLI)
image = "0.25"

# Parallelism
rayon = "1.8"

# Testing
pretty_assertions = "1.4"
tempfile = "3.8"
paste = "1.0"
